# goudunix

./: .gitignore  README.md  configuration.nix  flake.nix  result
installer/: README.md  cinnamon-live.nix  iso.nix
installer/calamares/: default.nix  partition.conf  settings.conf  users.conf
installer/calamares/branding/goudunix/: branding.desc  notesqml@unfree.qml  show.qml
installer/calamares/modules/goudupackages/: CMakeLists.txt  Config.qml  GoudupackagesViewStep.cpp  GoudupackagesViewStep.h  goudupackages.conf  goudupackages.qml  module.desc
installer/calamares/modules/nixos/: main.py
installer/templates/: install-choices.nix.in
modules/: audio.nix  boot.nix  dconf.nix  default-apps.nix  desktop.nix  hardening.nix  hardware.nix  install-choices.nix  locale.nix  networking.nix  overlays.nix  packages.nix  printing.nix  shell.nix  users.nix  wallpaper.nix
